Refactor dependencies handling: rename modules and streamline imports for improved clarity and organization

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -28,31 +28,31 @@
         <Compile Include="endpoints\embassies\russian\Delete.fs" />
         <Compile Include="endpoints\embassies\russian\Request.fs" />
         <Compile Include="endpoints\Request.fs" />
-        <Compile Include="dependencies\Culture.fs" />
-        <Compile Include="dependencies\Web.fs" />
-        <Compile Include="dependencies\Persistence.fs" />
-        <Compile Include="dependencies\consumer\Client.fs" />
-        <Compile Include="dependencies\consumer\Request.fs" />
-        <Compile Include="dependencies\consumer\embassies\russian\Russian.fs" />
-        <Compile Include="dependencies\consumer\embassies\russian\Midpass.fs" />
-        <Compile Include="dependencies\consumer\embassies\russian\Kdmid.fs" />
-        <Compile Include="dependencies\consumer\embassies\Embassies.fs" />
-        <Compile Include="dependencies\consumer\Users.fs" />
+        <Compile Include="dependencies\client\Web.fs" />
+        <Compile Include="dependencies\client\Culture.fs" />
+        <Compile Include="dependencies\client\Persistence.fs" />
+        <Compile Include="dependencies\client\Client.fs" />
+        <Compile Include="dependencies\client\Request.fs" />
+        <Compile Include="dependencies\embassies\russian\Russian.fs" />
+        <Compile Include="dependencies\embassies\russian\Midpass.fs" />
+        <Compile Include="dependencies\embassies\russian\Kdmid.fs" />
+        <Compile Include="dependencies\embassies\Embassies.fs" />
+        <Compile Include="dependencies\Users.fs" />
         <Compile Include="services\culture\Query.fs" />
         <Compile Include="services\culture\Command.fs" />
         <Compile Include="services\embassies\russian\kdmid\Message.fs" />
         <Compile Include="services\embassies\russian\kdmid\Query.fs" />
         <Compile Include="services\embassies\russian\kdmid\Command.fs" />
         <Compile Include="services\embassies\russian\midpass\Query.fs" />
-        <Compile Include="services\embassies\russian\Service.fs" />
-        <Compile Include="services\embassies\Service.fs" />
-        <Compile Include="services\users\Service.fs" />
-        <Compile Include="controllers\culture\Culture.fs" />
-        <Compile Include="controllers\users\Users.fs" />
+        <Compile Include="services\embassies\russian\Query.fs" />
+        <Compile Include="services\embassies\Query.fs" />
+        <Compile Include="services\users\Query.fs" />
+        <Compile Include="controllers\Culture.fs" />
         <Compile Include="controllers\embassies\Embassies.fs" />
         <Compile Include="controllers\embassies\russian\Kdmid.fs" />
         <Compile Include="controllers\embassies\russian\Midpass.fs" />
         <Compile Include="controllers\embassies\russian\Russian.fs" />
+        <Compile Include="controllers\Users.fs" />
         <Compile Include="controllers\Controller.fs" />
         <Compile Include="Client.fs" />
     </ItemGroup>
