Refactor routing structure: rename endpoints to router and streamline request handling for improved clarity and organization

--- a/src/embassy-access-telegram/embassy-access-telegram.fsproj
+++ b/src/embassy-access-telegram/embassy-access-telegram.fsproj
@@ -10,24 +10,24 @@
         <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\Chat.fs" />
         <Compile Include="data_access\Chat.fs" />
-        <Compile Include="endpoints\culture\Get.fs" />
-        <Compile Include="endpoints\culture\Post.fs" />
-        <Compile Include="endpoints\culture\Request.fs" />
-        <Compile Include="endpoints\users\Get.fs" />
-        <Compile Include="endpoints\users\Request.fs" />
-        <Compile Include="endpoints\embassies\Get.fs" />
-        <Compile Include="endpoints\embassies\Request.fs" />
-        <Compile Include="endpoints\embassies\russian\kdmid\Get.fs" />
-        <Compile Include="endpoints\embassies\russian\kdmid\Post.fs" />
-        <Compile Include="endpoints\embassies\russian\kdmid\Delete.fs" />
-        <Compile Include="endpoints\embassies\russian\kdmid\Request.fs" />
-        <Compile Include="endpoints\embassies\russian\midpass\Get.fs" />
-        <Compile Include="endpoints\embassies\russian\midpass\Request.fs" />
-        <Compile Include="endpoints\embassies\russian\Get.fs" />
-        <Compile Include="endpoints\embassies\russian\Post.fs" />
-        <Compile Include="endpoints\embassies\russian\Delete.fs" />
-        <Compile Include="endpoints\embassies\russian\Request.fs" />
-        <Compile Include="endpoints\Request.fs" />
+        <Compile Include="router\culture\Get.fs" />
+        <Compile Include="router\culture\Post.fs" />
+        <Compile Include="router\culture\Method.fs" />
+        <Compile Include="router\users\Get.fs" />
+        <Compile Include="router\users\Method.fs" />
+        <Compile Include="router\embassies\Get.fs" />
+        <Compile Include="router\embassies\Method.fs" />
+        <Compile Include="router\embassies\russian\kdmid\Get.fs" />
+        <Compile Include="router\embassies\russian\kdmid\Post.fs" />
+        <Compile Include="router\embassies\russian\kdmid\Delete.fs" />
+        <Compile Include="router\embassies\russian\kdmid\Method.fs" />
+        <Compile Include="router\embassies\russian\midpass\Get.fs" />
+        <Compile Include="router\embassies\russian\midpass\Method.fs" />
+        <Compile Include="router\embassies\russian\Get.fs" />
+        <Compile Include="router\embassies\russian\Post.fs" />
+        <Compile Include="router\embassies\russian\Delete.fs" />
+        <Compile Include="router\embassies\russian\Method.fs" />
+        <Compile Include="router\Router.fs" />
         <Compile Include="dependencies\client\Web.fs" />
         <Compile Include="dependencies\client\Culture.fs" />
         <Compile Include="dependencies\client\Persistence.fs" />
