Add new client modules for Kdmid and Midpass; implement initialization and request handling

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -4,6 +4,7 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="domain\Constants.fs" />
         <Compile Include="domain\EmbassyNode.fs" />
         <Compile Include="domain\Confirmation.fs" />
         <Compile Include="domain\Appointment.fs" />
