--- a/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
+++ b/src/embassy-access-modules/embassy-access-modules-russian/embassy-access-modules-russian.fsproj
@@ -20,6 +20,13 @@
         <Compile Include="services\info.midpass.ru\domain\MidpassRequest.fs" />
         <Compile Include="domain\Service.fs" />
         <Compile Include="API.fs"/>
+        <Compile Include="clients\kdmid\Domain.fs" />
+        <Compile Include="clients\kdmid\Client.fs" />
+        <Compile Include="clients\kdmid\Http.fs" />
+        <Compile Include="clients\kdmid\Service.fs" />
+        <Compile Include="clients\midpass\Domain.fs" />
+        <Compile Include="clients\midpass\Client.fs" />
+        <Compile Include="Client.fs" />
     </ItemGroup>
 
     <ItemGroup>
