Add Midpass client implementation and related tests; refactor Kdmid client structure

--- a/src/embassy-access-modules/embassy-access-russian-tests/embassy-access-russian-tests.fsproj
+++ b/src/embassy-access-modules/embassy-access-russian-tests/embassy-access-russian-tests.fsproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\embassy-access-modules-russian\embassy-access-modules-russian.fsproj" />
+    <ProjectReference Include="..\embassy-access-russian\embassy-access-russian.fsproj" />
   </ItemGroup>
 
 </Project>
