Add Limitations property to Request and related entities

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -14,6 +14,7 @@
         <Compile Include="domain\ConfirmationState.fs" />
         <Compile Include="domain\ServiceNode.fs" />
         <Compile Include="domain\RequestService.fs" />
+        <Compile Include="domain\Limitation.fs" />
         <Compile Include="domain\Request.fs" />
         <Compile Include="domain\Notification.fs" />
         <Compile Include="data_access\EmbassyGraph.fs" />
@@ -25,6 +26,7 @@
         <Compile Include="data_access\ConfirmationOption.fs" />
         <Compile Include="data_access\ConfirmationState.fs" />
         <Compile Include="data_access\RequestService.fs" />
+        <Compile Include="data_access\Limitation.fs" />
         <Compile Include="data_access\Request.fs" />
     </ItemGroup>
   
