Refactor limitation handling: rename Limitation to Limit, update state management, and improve clarity in related modules

--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -12,7 +12,7 @@
         <Compile Include="domain\ConfirmationState.fs" />
         <Compile Include="domain\ServiceNode.fs" />
         <Compile Include="domain\RequestService.fs" />
-        <Compile Include="domain\Limitation.fs" />
+        <Compile Include="domain\Limit.fs" />
         <Compile Include="domain\Request.fs" />
         <Compile Include="domain\Notification.fs" />
         <Compile Include="data_access\EmbassyGraph.fs" />
