--- a/src/embassy-access-core/embassy-access-core.fsproj
+++ b/src/embassy-access-core/embassy-access-core.fsproj
@@ -22,7 +22,7 @@
         <Compile Include="data_access\ProcessState.fs" />
         <Compile Include="data_access\ConfirmationState.fs" />
         <Compile Include="data_access\RequestService.fs" />
-        <Compile Include="data_access\Limitation.fs" />
+        <Compile Include="data_access\Limit.fs" />
         <Compile Include="data_access\Request.fs" />
     </ItemGroup>
   
