--- a/src/embassy-access-worker/embassy-access-worker.fsproj
+++ b/src/embassy-access-worker/embassy-access-worker.fsproj
@@ -25,12 +25,21 @@
         <Content Include="..\..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
-        <Content Include="appsettings.yaml">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </Content>
         <Content Include="data\Chats.json" />
         <Content Include="data\Requests.json" />
         <Content Include="data\Culture.json" />
+        <Content Include="settings\worker.yaml">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Include="settings\embassies.yaml">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Include="settings\embassies.rus.yaml">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+        <Content Include="settings\appsettings.yaml">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
