--- a/src/embassy-access-worker/settings/worker.yaml
+++ b/src/embassy-access-worker/settings/worker.yaml
@@ -1,5 +1,5 @@
 # @format
-SearchAppointments: &SearchAppointments
+SearchAppointments: &SearchAppointmentsHandler
   - Id: SA
     Name: Search appointments
     Enabled: true
@@ -49,7 +49,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: USA
@@ -67,7 +67,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: DEU
@@ -85,7 +85,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: RUS
@@ -103,7 +103,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 StartTime: 00:55:00
                 StopTime: 23:55:20
@@ -123,7 +123,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: GRC
@@ -141,7 +141,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: ITA
@@ -159,7 +159,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: ESP
@@ -177,7 +177,7 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
     - Id: NLD
@@ -195,6 +195,6 @@ Worker:
             - Id: BEG
               Name: Belgrade
               Tasks:
-                <<: *SearchAppointments
+                <<: *SearchAppointmentsHandler
               Schedule:
                 TimeZone: 2
