Refactor task handling: rename WorkerActiveTask to ActiveTask for improved clarity and consistency across modules

--- a/src/embassy-access-worker/settings/worker.yaml
+++ b/src/embassy-access-worker/settings/worker.yaml
@@ -4,7 +4,7 @@ Worker:
   Id: WRK
   Enabled: true
   WaitResult: true
-  Description: Embassy worker
+  Description: Initialization of the required services
   Schedule:
   Tasks:
     - Id: FRA
